[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/fira_sans.font" type="BitmapFont" id=2]

[node name="Pause Menu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="Pause Label" type="Label" parent="."]
margin_left = 96.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 96.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "pause"
align = 1
valign = 1
uppercase = true

[node name="Resume Button" type="Button" parent="."]
margin_left = 96.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 192.0
hint_tooltip = "resume_tooltip"
custom_fonts/font = ExtResource( 2 )
text = "resume"

[node name="Quit Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 512.0
margin_right = 216.0
margin_bottom = 536.0
hint_tooltip = "quit_tooltip"
custom_fonts/font = ExtResource( 2 )
text = "quit"

[node name="Restart Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 256.0
margin_right = 216.0
margin_bottom = 280.0
hint_tooltip = "restart_tooltip"
custom_fonts/font = ExtResource( 2 )
text = "restart"

[node name="Main Menu Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 384.0
margin_right = 216.0
margin_bottom = 408.0
hint_tooltip = "go_to_main_menu_tooltip"
custom_fonts/font = ExtResource( 2 )
text = "go_to_main_menu"
clip_text = true

[connection signal="pressed" from="Resume Button" to="." method="_on_Resume_Button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Restart Button" to="." method="_on_Restart_Button_pressed"]
[connection signal="pressed" from="Main Menu Button" to="." method="_on_Main_Menu_Button_pressed"]
